--- a/assets/style.css
+++ b/assets/style.css
@@ -1,113 +1,135 @@
-*{
-    color: rgb(4, 17, 13);
-    background-color: rgb(173, 233, 233);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
 
-.container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+html {
+    font-size: 100%;
+    box-sizing: border-box;
+  }
   
-}
-
-.weatherForecast{
-    margin-top: 50px;
-}
-
-#cityInput, #cityName, #inputContainer, button{
-    margin: 4px;
-    padding: 5px;
-    text-align: center;
-    font-weight: bold;
-
-}
-
-
-#weatherContainer{
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    margin-top: 100px;
-    margin-right:  -50%;
-    transform: translate(-50%,-50%);
-    height: 280px;
-    width: 1250px;
-    border: 5px solid black;
-    border-radius: :10px;
-    
-
-}
-
-
-#iconsContainer{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right:  -50%;
-    transform: translate(-50%,-50%);
-    height: 280px;
-    width: 1250px;
-    border: 5px solid black;
-    border-radius: :10px;
-    
-
-}
-
-
-.icons{
-    display: inline-block;
-    float: left;
-    height: 200px;
-    width: 185;
-    margin: 20px;
-    border:5px solid black;
-    border-radius:10px;
-
-}
-
-.image{
-    height: 140px;
-    width: 100px;
-
-}
-
-.imgClass{
-    height:140px;
-    width:100px;
-
-}
-
-.weather{
-    margin: 5px;
-    border-radius: 5px;
-    text-align: center;
-    font-weight: bold;
-
-}
-
-.minValues{
-    text-align: center;
-    display: inline-block;
-    border-radius: 5px;
-    height: 25px;
-    width: 85px;
+  *,
+  *::after,
+  *::before {
+    box-sizing: inherit;
     margin: 0;
-    margin-bottom: 5px;
-    margin-left: 5px;
-
-}
-
-.maxValues{
+    padding: 0;
+  }
+  
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 1rem;
+  }
+  
+  header {
+    background: linear-gradient(
+      to right,
+      hsl(0, 0%, 70%),
+      hsl(0, 0%, 40%)
+    );
+    color: hsl(0, 0%, 100%);
+    font-size: 24px;
+    padding: 1rem 0 1rem 0;
     text-align: center;
-    display: inline-block;
-    border-radius: 5px;
-    height: 25px;
-    width: 85px;
-    margin: 0;
-    margin-bottom: 5px;
-    margin-felt: 5px;
-
-}
+  }
+  
+  main {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  aside {
+    margin: 1rem;
+    width: 25%;
+  }
+  
+  section {
+    margin: 1rem;
+    width: 75%;
+  }
+  
+  label {
+    font-size: 24px;
+    font-weight: bolder;
+    width: 100%;
+  }
+  
+  input[type="text"] {
+    font-size: 18px;
+    margin: 0.5rem 0 0.5rem 0;
+    padding: 0.25rem;
+    width: 100%;
+  }
+  
+  button[type="submit"] {
+    background-color: hsl(203, 89%, 53%);
+    border: none;
+    color: hsl(0, 0%, 100%);
+    font-size: 18px;
+    margin: 0 0 0.5rem 0;
+    padding: 0.5rem 0 0.5rem 0;
+    width: 100%;
+  }
+  
+  button[type="submit"]:hover {
+    background-color: hsl(203, 92%, 67%);
+  }
+  
+  hr {
+    margin: 0 0 0.5rem 0;
+  }
+  
+  .city-list button {
+    background-color: hsl(0, 0%, 61%);
+    border: none;
+    color: hsl(0, 0%, 0%);
+    font-size: 18px;
+    margin: 0 0 0.5rem 0;
+    padding: 0.5rem 0 0.5rem 0;
+    text-align: center;
+    width: 100%;
+  }
+  
+  .city-list button:hover {
+    background-color: hsl(0, 0%, 80%);
+  }
+  
+  .city {
+    border: 1.5px solid hsl(0, 0%, 0%);
+    margin: 0 0 1rem 0;
+    width: 90%;
+  }
+  
+  .city p,
+  .city h2 {
+    margin: 0.25rem 0 1rem 0.25rem;
+  }
+  
+  .forecast {
+    width: 90%;
+  }
+  
+  .forecast h3 {
+    margin: 0 0 1rem 0;
+  }
+  
+  .cards {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .card {
+    background-color: hsl(243, 28%, 13%);
+    color: hsl(0, 0%, 100%);
+    width: 20%;
+  }
+  
+  .card:not(:last-child) {
+    margin: 0 1rem 0 0;
+  }
+  
+  .card h4,
+  .card p {
+    margin: 0.25rem 0 1rem 0.25rem;
+  }
+  
+  .hidden {
+    display: none;
+  }
+  
